<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/preferences_themes">
        <SwitchPreferenceCompat
            android:key="theme_switch"
            android:title="@string/preferences_dark_mode"
            android:summaryOff="@string/preferences_light_mode"
            android:summaryOn="@string/preferences_dark_mode"
            android:summary="@string/preferences_switch_theme"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_language">
        <ListPreference
            android:key="language_switch"
            android:title="@string/preferences_language"
            android:summary="@string/preferences_language_summary"
            android:defaultValue="es"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"/>
    </PreferenceCategory>

</PreferenceScreen>