<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/icon_home"
        android:title="@string/menu_home"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/icon_map"
        android:title="@string/menu_map"
        android:orderInCategory="102"
        app:showAsAction="always" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/icon_favourite"
        android:title="@string/menu_favorites"
        android:orderInCategory="100"
        app:showAsAction="always" />
</menu>