<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.FilterDialogFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/filter_by_zone"
        app:layout_constraintBottom_toTopOf="@+id/spinner_zona"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Spinner
        android:id="@+id/spinner_zona"
        android:layout_width="345dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/filter_by_concejo"
        app:layout_constraintBottom_toTopOf="@+id/spinner_concejo"
        app:layout_constraintStart_toStartOf="@+id/spinner_zona"
        app:layout_constraintTop_toBottomOf="@+id/spinner_zona" />

    <Spinner
        android:id="@+id/spinner_concejo"
        android:layout_width="345dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button_aplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button_aplicar"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:text="@string/button_apply_filters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_concejo" />
</androidx.constraintlayout.widget.ConstraintLayout>
